[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/ui/button.gd" type="Script" id=1]
[ext_resource path="res://audio/sfx/Over.wav" type="AudioStream" id=2]
[ext_resource path="res://audio/sfx/Dica.wav" type="AudioStream" id=3]

[node name="button" type="Button"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -147.0
margin_top = -86.0
margin_right = 148.0
margin_bottom = 87.0
mouse_default_cursor_shape = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
max_scale = Vector2( 1.2, 1.2 )

[node name="tween" type="Tween" parent="."]

[node name="focus" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -24.0
bus = "sfx"

[node name="click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -24.0
bus = "sfx"
[connection signal="focus_entered" from="." to="." method="_on_Button_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_Button_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_Button_mouse_entered"]
[connection signal="pressed" from="." to="." method="_on_button_pressed"]
